Add basic tests
The strategy so far is to create a dummy sails application, into which
the hook under test can be loaded.

Barrels is used to load test fixture data into a sails-memory database.

`sails.request` is used to make a fake client request to get the model data,
and the format of the response body is asserted to be as expected for jsonapi.

To run, `node <path/to/test.js>` can be used.

--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
     "jsonapi-serializer": "^1.0.4",
     "pluralize": "^1.1.2",
     "sails-build-dictionary": "^0.10.1"
+  },
+  "devDependencies": {
+    "barrels": "^1.5.0",
+    "sails": "^0.11.0",
+    "sails-memory": "^0.10.5",
+    "tape": "^4.0.1"
   }
 }
