--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "isHook": true
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape tests/responses/*.js"
   },
   "keywords": [
     "sails",
