--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "isHook": true
   },
   "scripts": {
-    "test": "tape tests/responses/*.js",
+    "test": "tape tests/responses/*.js | tap-spec",
     "lint": "eslint lib/ tests/responses/",
     "pretest": "npm run lint"
   },
@@ -33,6 +33,7 @@
     "eslint-plugin-standard": "^1.1.0",
     "sails": "^0.11.0",
     "sails-memory": "^0.10.5",
+    "tap-spec": "^4.0.2",
     "tape": "^4.0.1"
   }
 }
