--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "devDependencies": {
     "barrels": "^1.5.0",
     "eslint": "^1.0.0",
-    "eslint-config-ianvs": "^0.0.3",
-    "eslint-config-standard": "^4.0.0-5",
+    "eslint-config-ianvs": "^0.0.4",
+    "eslint-config-standard": "^4.0.0",
     "eslint-plugin-standard": "^1.1.0",
     "sails": "^0.11.0",
     "sails-memory": "^0.10.5",
