--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sails": "^0.11.0",
     "sails-memory": "^0.10.5",
     "tap-spec": "^4.0.2",
-    "tape": "^4.0.1"
+    "tape": "^4.0.1",
+    "tape-catch": "^1.0.4"
   }
 }
