--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": "Ian VanSchooten",
   "license": "MIT",
   "dependencies": {
-    "jsonapi-serializer": "^1.0.4",
+    "jsonapi-serializer": "SeyZ/jsonapi-serializer#2.0.0-beta.1",
     "pluralize": "^1.1.2",
     "sails-build-dictionary": "^0.10.1"
   },
