--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
   ],
   "author": "Ian VanSchooten",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/IanVS/sails-hook-jsonapi/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/IanVS/sails-hook-jsonapi"
+  },
   "dependencies": {
     "jsonapi-serializer": "SeyZ/jsonapi-serializer#2.0.0-beta.1",
     "pluralize": "^1.1.2",
