--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: node_js
 node_js:
-  - "4.2"
-  - "4.1"
-  - "4.0"
-  - "0.12"
-  - "0.10"
+  - "stable"
+  - "lts"
 
 before_script:
   - "npm i -g eslint"
