--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "jsonapi-serializer": "^2.0.4",
+    "lodash": "^4.5.0",
     "pluralize": "^1.1.2",
     "sails-build-dictionary": "^0.10.1"
   },
