--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "isHook": true
   },
   "scripts": {
-    "test": "tape tests/responses/*.js | tap-spec",
+    "test": "tape tests/*-test.js | tap-spec",
     "lint": "eslint lib/ tests/responses/",
     "pretest": "npm run lint",
     "postinstall": "cd ./tests/dummy && npm i"
@@ -29,7 +29,7 @@
     "url": "https://github.com/IanVS/sails-hook-jsonapi"
   },
   "dependencies": {
-    "jsonapi-serializer": "^2.1.0",
+    "jsonapi-serializer": "^3.0.2",
     "lodash": "^4.5.0",
     "pluralize": "^1.1.2",
     "sails-build-dictionary": "^0.10.1"
