--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "tape tests/*-test.js | tap-spec",
-    "lint": "eslint lib/ tests/responses/",
+    "lint": "eslint **/*.js",
     "pretest": "npm run lint",
     "postinstall": "cd ./tests/dummy && npm i"
   },
